# WRapped

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  config.toml.example
.github/workflows/: ci.yml
src/: config.rs  error.rs  mail.rs  main.rs  server.rs  stats.rs  wr.rs
web/: index.html
web/css/: styles.css
web/js/: main.js
