[package]
name = "wrapped"
authors = ["Tim Fischer <fischeti@iis.ee.ethz.ch>"]
repository = "https://github.com/fischeti/WRapped"
description = "Wrapped but for Weekly Reports"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = "4.4.11"
imap = "2.4.1"
imap-proto = "0.10.0"
itertools = "0.12.0"
native-tls = "0.2.11"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
