[package]
name = "wrapped"
authors = ["Tim Fischer <fischeti@iis.ee.ethz.ch>"]
repository = "https://github.com/fischeti/WRapped"
description = "Wrapped but for Weekly Reports"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
chrono = "0.4.31"
clap = "4.4.11"
imap = "3.0.0-alpha.12"
imap-proto = "0.16.3"
itertools = "0.12.0"
log = "0.4.20"
native-tls = "0.2.11"
open = "5.0.1"
pretty_env_logger = "0.5.0"
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
